<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Titulo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="2dp"
        android:layout_weight="1">

    </TextView>
    <!--Fin Titulo -->

    <!--CÉDULA-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/cc"
            android:textSize="25sp"
            android:gravity="center">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtCC"
            android:hint="@string/cc1"
            android:inputType="number">

        </EditText>

    </LinearLayout>
    <!--FIN CÉDULA-->

    <!--NOMBRE-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/nom"
            android:textSize="25sp"
            android:gravity="center">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtNOM"
            android:hint="@string/nom1"
            android:inputType="text">

        </EditText>

    </LinearLayout>
    <!--FIN NOMBRE-->

    <!--TELEFONO-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/tel"
            android:textSize="25sp"
            android:gravity="center">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtTEL"
            android:hint="@string/tel1"
            android:inputType="number">

        </EditText>

    </LinearLayout>
    <!--FIN TELEFONO-->

    <!--BOTONES-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/insert"
            android:layout_weight="1"
            android:id="@+id/btnInsert">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/query"
            android:layout_weight="1"
            android:id="@+id/btnQuery">

        </Button>

    </LinearLayout>
    <!--FIN BOTONES-->

</LinearLayout>